@@ -21,6 +21,7 @@ export(findExperiments)
 export(generateProblemInstance)
 export(getAlgorithm)
 export(getAlgorithmIds)
+export(getExperimentParts)
 export(getIndex)
 export(getProblem)
 export(getProblemIds)
