@@ -1,5 +1,6 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
 \name{generateProblemInstance}
+\alias{Instance}
 \alias{generateProblemInstance}
 \title{Generate dynamic part of problem.}
 \usage{
@@ -16,6 +17,8 @@ Id of job.}
 Dynamic part of problem.
 }
 \description{
-Generate dynamic part of problem.
+Calls the dynamic problem function on the static problem part and
+thereby creates the problem instance.
+The seeding mechanism is identical to execution on the slave.
 }
 
