@@ -21,6 +21,7 @@ The requested object is loaded from disk.
 \seealso{
 Other get: \code{\link{getAlgorithmIds}};
   \code{\link{getAlgorithm}};
+  \code{\link{getExperimentParts}};
   \code{\link{getJobs.ExperimentRegistry}};
   \code{\link{getProblemIds}}
 }
