@@ -21,6 +21,7 @@ Get ids of problems in registry.
 \seealso{
 Other get: \code{\link{getAlgorithmIds}};
   \code{\link{getAlgorithm}};
+  \code{\link{getExperimentParts}};
   \code{\link{getJobs.ExperimentRegistry}};
   \code{\link{getProblem}}
 }
